@@ -8,9 +8,11 @@ V 3.0.0
 * features
 - initalise cputuner from (default) configurations
 - label powersave bias
+- update statics tab on click
+- minor things
 * bug fixes
 - start/stop notification entry on enable/disable
--
+- more fixes
 
 V 2.7.7
 * features
